--- a/menu/src/main/resources/application.properties
+++ b/menu/src/main/resources/application.properties
@@ -1,3 +1,3 @@
+axon.amqp.exchange=MenuExchange
 axon.eventhandling.processors.amqpEvents.source=menuMessageSource
-axon.amqp.exchange=MenuEvents
 spring.data.rest.basePath=/menu
