--- a/orders/src/main/resources/application.properties
+++ b/orders/src/main/resources/application.properties
@@ -1,2 +1,2 @@
+axon.amqp.exchange=OrderExchange
 axon.eventhandling.processors.amqpEvents.source=ordersMessageSource
-axon.amqp.exchange=OrderEvents
