--- a/menu/pom.xml
+++ b/menu/pom.xml
@@ -67,6 +67,11 @@
             <version>3.0.5</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.9.0.pr4</version>
+        </dependency>
     </dependencies>
 
     <build>
